k8s/db-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: http-db
