k8s/workqueue-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workqueue-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: workqueue
  ports:
    - port: 5672
      targetPort: 5672
      name: grpc-workqueue
