k8s/workqueue-management-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workqueue-management-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: workqueue
  ports:
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: http-workqueue
